added schemavalidator UI changes

--- a/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/conf/locales/jaggery/locale_default.json
+++ b/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/conf/locales/jaggery/locale_default.json
@@ -630,5 +630,8 @@
     "Number of API Subscriptions" : "Number of API Subscriptions",
     "You must select a mediation policy to download": "You must select a mediation policy to download.",
     "Error while retrieving the selected mediation policy": "Error while retrieving the selected mediation policy.",
-    "Delete Task" : "Delete Task"
+    "Delete Task" : "Delete Task",
+    "Schema Validation:": "Schema Validation:",
+    "JSON": "JSON",
+    "Marking an API is to be validated from the schema": "Marking an API is to be validated from the schema"
 }
