--- a/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/conf/locales/js/i18nResources.json
+++ b/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/conf/locales/js/i18nResources.json
@@ -116,6 +116,8 @@
     "Show Fewer Options": "Show Fewer Options",
     "Show More Options": "Show More Options",
     "Show more details": "Show more details",
+    "Show Advanced Options": "Show Advanced Options",
+    "Show Fewer Advanced Options": "Show Fewer Advanced Options",
     "Subscriber Count": "Subscriber Count",
     "Subscription Count": "Subscription Count",
     "Success": "Success",
