--- a/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/admin/site/conf/locales/js/i18nResources.json
+++ b/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/admin/site/conf/locales/js/i18nResources.json
@@ -51,6 +51,8 @@
     "Severity": "Severity",
     "Show Less Options": "Show Less Options",
     "Show More Options": "Show More Options",
+    "Show Advanced Options": "Show Advanced Options",
+    "Show Fewer Advanced Options": "Show Fewer Advanced Options",
     "Stats are disabled.": "Stats are disabled.",
     "Successfully saved": "Successfully saved",
     "Tier deletion might affect current subscriptions. Are you sure you want to delete this tier? ": "Tier deletion might affect current subscriptions. Are you sure you want to delete this tier? ",
